fix overflow for cards

--- a/packages/mikado_reborn/src/components/Card/Card.scss
+++ b/packages/mikado_reborn/src/components/Card/Card.scss
@@ -5,6 +5,7 @@
   border: 1px solid map-get($colors, 'neutral-20');
   box-sizing: border-box;
   border-radius: 4px;
+  overflow: hidden;
 
   &--elevated {
     @include shadow-medium;
